forth/test/fail/test_call_extra_dot.af
\ Must fail to compile.
fun: .test_call_extra_dot { -- out }
  29 1 .u/
end
